--- a/liff/index.html
+++ b/liff/index.html
@@ -94,7 +94,7 @@
     async function main() {
        alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1656600249-LwlzqaON" })
-      getEnvironment()
+      // getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
