--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     }
 
     async function main() {
-       alert("LINE Developers x Skooldio")
+      //  alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1656600249-LwlzqaON" })
-      // getEnvironment()
+      getEnvironment()
       // getUserProfile()
       // getContext()
       // getFriendship()
