--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     }
 
     async function main() {
-      //  alert("LINE Developers x Skooldio")
+       alert("LINE Developers x Skooldio")
       await liff.init({ liffId: "1656600249-LwlzqaON" })
       getEnvironment()
       // getUserProfile()
